# is-prime-v0.1.0

./: Cargo.toml  README.md  inputs.toml  is_prime.masp  root_ns:root@1.0.masm
src/: lib.rs
